--- a/src/app/modules/app-orders/pages/app-order/app-order.component.html
+++ b/src/app/modules/app-orders/pages/app-order/app-order.component.html
@@ -4,7 +4,8 @@
 
     <div class="field has-addons">
       <p class="control has-icons-left" style="width:100%">
-        <input class="input is-rounded is-small" style="padding-left:2.5rem;" type="text" placeholder="Search Menu Item">
+        <input class="input is-rounded is-small" style="padding-left:2.5rem;" type="text"
+          placeholder="Search Menu Item">
         <span class="icon is-small is-left">
           <fa-icon icon="search"></fa-icon>
         </span>
@@ -29,7 +30,7 @@
 
     <div class="columns is-1 is-mobile is-multiline">
       <div class="column">
-        <div class="box menu-item">
+        <div class="box menu-item link">
           <div class="content has-text-centered">
             <div>Masala Chai</div>
             <div>R 12 * 2</div>
@@ -38,7 +39,7 @@
       </div>
 
       <div class="column">
-        <div class="box menu-item">
+        <div class="box menu-item link">
           <div class="content has-text-centered">
             <div class="menu-item">Tripple Schezwan manchurian rice</div>
             <div>R 40 * 1</div>
@@ -46,7 +47,7 @@
         </div>
       </div>
       <div class="column">
-        <div class="box menu-item">
+        <div class="box menu-item link">
           <div class="content has-text-centered">
             <div>Masala Chai</div>
             <div>R 12 * 2</div>
@@ -54,7 +55,7 @@
         </div>
       </div>
       <div class="column">
-        <div class="box menu-item">
+        <div class="box menu-item link">
           <div class="content has-text-centered">
             <div>Masala Chai</div>
             <div>R 12 * 2</div>
@@ -62,7 +63,7 @@
         </div>
       </div>
       <div class="column">
-        <div class="box menu-item">
+        <div class="box menu-item link">
           <div class="content has-text-centered">
             <div>Masala Chai</div>
             <div>R 12 * 2</div>
@@ -70,7 +71,7 @@
         </div>
       </div>
       <div class="column">
-        <div class="box menu-item">
+        <div class="box menu-item link">
           <div class="content has-text-centered">
             <div>Masala Chai</div>
             <div>R 12 * 2</div>
@@ -78,7 +79,7 @@
         </div>
       </div>
       <div class="column">
-        <div class="box menu-item">
+        <div class="box menu-item link">
           <div class="content has-text-centered">
             <div>Masala Chai</div>
             <div>R 12 * 2</div>
@@ -86,7 +87,7 @@
         </div>
       </div>
       <div class="column">
-        <div class="box menu-item">
+        <div class="box menu-item link">
           <div class="content has-text-centered">
             <div>Masala Chai</div>
             <div>R 12 * 2</div>
@@ -94,7 +95,7 @@
         </div>
       </div>
       <div class="column">
-        <div class="box menu-item">
+        <div class="box menu-item link">
           <div class="content has-text-centered">
             <div>Masala Chai</div>
             <div>R 12 * 2</div>
@@ -102,7 +103,7 @@
         </div>
       </div>
       <div class="column">
-        <div class="box menu-item">
+        <div class="box menu-item link">
           <div class="content has-text-centered">
             <div>Masala Chai</div>
             <div>R 12 * 2</div>
@@ -110,15 +111,15 @@
         </div>
       </div>
       <div class="column">
-        <div class="box menu-item">
+        <div class="box menu-item link">
           <div class="content has-text-centered">
             <div>Masala Chai</div>
-            <div>R 12 * 2</div>
+            <div>R 12 * 6</div>
           </div>
         </div>
       </div>
       <div class="column">
-        <div class="box menu-item">
+        <div class="box menu-item link">
           <div class="content has-text-centered">
             <div>Masala Chai</div>
             <div>R 12 * 2</div>
@@ -134,8 +135,27 @@
 
   <div class="column" aria-label="KOT list">
 
+    <!-- <div class="box">
+                <div class="content columns is-mobile">
+                <div class="column">Masala Chai</div>
+                <div class="column">R 12 * 2</div>
+                </div>
+            </div> -->
+
     <div class="box">
       <div class="content">
+
+        <div class="columns is-mobile" style="margin-bottom:0%">
+          <h4 class="column">Table 2</h4>
+          <!-- <div class="column is-narrow has-text-right">
+            <a class="button is-small is-rounded is-primary" style="width:100px;margin-bottom: 10px;">Pay
+              Now</a>
+          </div>
+          <div class="column is-narrow has-text-right delete" style="    margin-top: .8rem;
+    margin-right: .5rem;">            
+          </div> -->
+
+        </div>
 
         <table class="table is-hoverable is-fullwidth">
           <thead>
@@ -213,7 +233,7 @@
                   <div class="column has-text-right" style="padding:0.2rem 0.5rem;">Rs 156
                   </div>
                 </div>
-                <div class="columns is-mobile">
+                <!-- <div class="columns is-mobile">
                   <div class="column" style="padding:0.2rem 0.5rem;">Discount</div>
                   <div class="column has-text-right" style="padding:0.2rem 0.5rem;">10%
                   </div>
@@ -222,17 +242,17 @@
                   <div class="column" style="padding:0.2rem 0.5rem;">Coupon(s)</div>
                   <div class="column has-text-right" style="padding:0.2rem 0.5rem;">-
                   </div>
-                </div>
+                </div> -->
                 <div class="columns is-mobile">
-                  <div class="column" style="padding:0.2rem 0.5rem;">Tax SGST</div>
+                  <div class="column" style="padding:0.2rem 0.5rem;">Tax(CGST,SGST)</div>
                   <div class="column has-text-right" style="padding:0.2rem 0.5rem;">Rs 7
                   </div>
                 </div>
-                <div class="columns is-mobile">
+                <!-- <div class="columns is-mobile">
                   <div class="column" style="padding:0.2rem 0.5rem;">Tax CGST</div>
                   <div class="column has-text-right" style="padding:0.2rem 0.5rem;">Rs 7
                   </div>
-                </div>
+                </div> -->
                 <div class="columns is-mobile">
                   <div class="column" style="padding:0.2rem 0.5rem;"><b>Payable</b></div>
                   <div class="column has-text-right" style="padding:0.2rem 0.5rem;"><b>Rs
