--- a/src/app/modules/app-orders/pages/square-table/square-table.component.scss
+++ b/src/app/modules/app-orders/pages/square-table/square-table.component.scss
@@ -8,11 +8,22 @@
     text-align: center;
 }
 
+.occupied{
+    background: url('../../../../../assets/images/sel_table_square.svg');
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 152px;
+    width: 300px;
+    text-align: center;
+    color: white;
+}
+
 .order_time{
     padding-top: 25px;
     text-align: right;
     padding-right: 35px;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 .table_no{
@@ -25,7 +36,7 @@
 .table_bill{
     margin-top: -5px;
     text-align: left;
-    font-size: 18px;
+    font-size: 16px;
     padding-left: 35px;
 }
 
