--- a/src/app/modules/app-orders/pages/app-orders/app-orders.component.html
+++ b/src/app/modules/app-orders/pages/app-orders/app-orders.component.html
@@ -11,25 +11,25 @@
 
 <div class="columns is-1 is-mobile is-centered is-multiline">
   <div class="column">
-    <app-round-table table-no="1" table-bill="R 1373" order-time="04:10" ></app-round-table>
+    <app-round-table table-no="1"></app-round-table>
   </div>
   <div class="column">
-    <app-round-table table-no="2"></app-round-table>
+    <app-round-table table-no="2" table-bill="R 43" order-time="18:05" occupied="true"></app-round-table>
   </div>
   <div class="column">
-    <app-square-table table-no="3" table-bill="R 1723" order-time="18:05"></app-square-table>
+    <app-square-table table-no="3"></app-square-table>
   </div>
   <div class="column">
-    <app-round-table table-no="4" table-bill="R 8" order-time="00:20"></app-round-table>
+    <app-round-table table-no="4" table-bill="R 8" order-time="00:20" occupied="true"></app-round-table>
   </div>
   <div class="column">
     <app-square-table table-no="5"></app-square-table>
   </div>
   <div class="column">
-    <app-square-table table-no="6" table-bill="R 8"></app-square-table>
+    <app-square-table table-no="6"></app-square-table>
   </div>
   <div class="column">
-    <app-square-table table-no="7" order-time="00:20"></app-square-table>
+    <app-square-table table-no="7" order-time="00:20" table-bill="R 478" occupied="true"></app-square-table>
   </div>
   
 </div>
