--- a/src/app/modules/app-orders/pages/round-table/round-table.component.scss
+++ b/src/app/modules/app-orders/pages/round-table/round-table.component.scss
@@ -8,19 +8,20 @@
   text-align: center;
 }
 
-.table_square {
-  background: url('../../../../../assets/images/table.svg');
+.occupied {
+  background: url('../../../../../assets/images/sel_table_round.svg');
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
-  height: 152px;
-  width: 300px;
+  height: 165px;
+  width: 165px;
   text-align: center;
+  color: white;
 }
 
 .order_time {
-  padding-top: 22px;
-  font-size: 18px;
+  padding-top: 25px;
+  font-size: 16px;
 }
 
 .table_no {
@@ -30,7 +31,7 @@
 }
 
 .table_bill {  
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .white {
