--- a/src/app/modules/bills/pages/bills/bills.component.html
+++ b/src/app/modules/bills/pages/bills/bills.component.html
@@ -164,108 +164,121 @@
     </div>
 
     <div class="box">
-      <div class="content">
-
-        <table class="table is-hoverable is-fullwidth">
-          <thead>
-            <tr>
-              <th>Menu Item</th>
-              <th>Rate</th>
-              <th>Quantity</th>
-              <th>Price</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Tea Powder</td>
-              <td>12</td>
-              <td>2</td>
-              <td>24</td>
-            </tr>
-            <tr>
-              <td>Tripple Schezwan manchurian rice</td>
-              <td>40</td>
-              <td>1</td>
-              <td>40</td>
-            </tr>
-            <tr>
-              <td>Tea Powder</td>
-              <td>12</td>
-              <td>2</td>
-              <td>24</td>
-            </tr>
-            <tr>
-              <td>Tea Powder</td>
-              <td>12</td>
-              <td>2</td>
-              <td>24</td>
-            </tr>
-            <tr>
-              <td>Tea Powder</td>
-              <td>12</td>
-              <td>2</td>
-              <td>24</td>
-            </tr>
-
-          </tbody>
-        </table>
-
-        <div class="box">
-          <div class="content">
-            <div class="columns is-mobile">
-              <div class="column is-one-third">
-                <div class="block">
-                  <a class="button is-small is-rounded is-primary"
-                    style="width:100px;margin-top:25px;margin-bottom: 10px;">Add KOT</a>
-                  <a class="button is-small is-rounded is-info" style="width:100px;margin-bottom: 10px;">Pay
-                    Now</a>
-                  <a class="button is-small is-rounded is-danger" style="width:100px;margin-bottom: 10px;">Cancel</a>
+        <div class="content">
+  
+          <table class="table is-hoverable is-fullwidth">
+            <thead>
+              <tr>
+                <th>Menu Item</th>
+                <th>Rate</th>
+                <th>Quantity</th>
+                <th>Price</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Tea Powder</td>
+                <td>12</td>
+                <td>2</td>
+                <td>24</td>
+              </tr>
+              <tr>
+                <td>Tripple Schezwan manchurian rice</td>
+                <td>40</td>
+                <td>1</td>
+                <td>40</td>
+              </tr>
+              <tr>
+                <td>Tea Powder</td>
+                <td>12</td>
+                <td>2</td>
+                <td>24</td>
+              </tr>
+              <tr>
+                <td>Tea Powder</td>
+                <td>12</td>
+                <td>2</td>
+                <td>24</td>
+              </tr>
+              <tr>
+                <td>Tea Powder</td>
+                <td>12</td>
+                <td>2</td>
+                <td>24</td>
+              </tr>
+              <tr>
+                <td>Tea Powder</td>
+                <td>12</td>
+                <td>2</td>
+                <td>24</td>
+              </tr>
+              <tr>
+                <td>Tea Powder</td>
+                <td>12</td>
+                <td>2</td>
+                <td>24</td>
+              </tr>
+  
+  
+            </tbody>
+          </table>
+  
+          <div class="box" style="box-shadow:none;">
+            <div class="content">
+              <div class="columns is-mobile">
+                <div class="column is-one-third">
+                  <div class="block">
+                    <!-- <a class="button is-small is-rounded is-primary"
+                      style="width:100px;margin-top:25px;margin-bottom: 10px;">Add KOT</a> -->
+                    <a class="button is-small is-rounded is-primary" style="width:100px;margin-bottom: 10px;">Pay
+                      Now</a>
+                    <a class="button is-small is-rounded is-danger" style="width:100px;margin-bottom: 10px;">Cancel</a>
+                  </div>
                 </div>
+  
+                <div class="column">
+                  <div class="columns is-mobile">
+                    <div class="column" style="padding:0.2rem 0.5rem;">Total Amount</div>
+                    <div class="column has-text-right" style="padding:0.2rem 0.5rem;">Rs 156
+                    </div>
+                  </div>
+                  <div class="columns is-mobile">
+                    <div class="column" style="padding:0.2rem 0.5rem;">Discount</div>
+                    <div class="column has-text-right" style="padding:0.2rem 0.5rem;">10%
+                    </div>
+                  </div>
+                  <div class="columns is-mobile">
+                    <div class="column" style="padding:0.2rem 0.5rem;">Coupon(s)</div>
+                    <div class="column has-text-right" style="padding:0.2rem 0.5rem;">-
+                    </div>
+                  </div>
+                  <div class="columns is-mobile">
+                    <div class="column" style="padding:0.2rem 0.5rem;">Tax SGST</div>
+                    <div class="column has-text-right" style="padding:0.2rem 0.5rem;">Rs 7
+                    </div>
+                  </div>
+                  <div class="columns is-mobile">
+                    <div class="column" style="padding:0.2rem 0.5rem;">Tax CGST</div>
+                    <div class="column has-text-right" style="padding:0.2rem 0.5rem;">Rs 7
+                    </div>
+                  </div>
+                  <div class="columns is-mobile">
+                    <div class="column" style="padding:0.2rem 0.5rem;"><b>Payable</b></div>
+                    <div class="column has-text-right" style="padding:0.2rem 0.5rem;"><b>Rs
+                        160</b>
+                    </div>
+                  </div>
+  
+                </div>
+  
               </div>
-
-              <div class="column">
-                <div class="columns is-mobile">
-                  <div class="column" style="padding:0.2rem 0.5rem;">Total Amount</div>
-                  <div class="column has-text-right" style="padding:0.2rem 0.5rem;">Rs 156
-                  </div>
-                </div>
-                <div class="columns is-mobile">
-                  <div class="column" style="padding:0.2rem 0.5rem;">Discount</div>
-                  <div class="column has-text-right" style="padding:0.2rem 0.5rem;">10%
-                  </div>
-                </div>
-                <div class="columns is-mobile">
-                  <div class="column" style="padding:0.2rem 0.5rem;">Coupon(s)</div>
-                  <div class="column has-text-right" style="padding:0.2rem 0.5rem;">-
-                  </div>
-                </div>
-                <div class="columns is-mobile">
-                  <div class="column" style="padding:0.2rem 0.5rem;">Tax SGST</div>
-                  <div class="column has-text-right" style="padding:0.2rem 0.5rem;">Rs 7
-                  </div>
-                </div>
-                <div class="columns is-mobile">
-                  <div class="column" style="padding:0.2rem 0.5rem;">Tax CGST</div>
-                  <div class="column has-text-right" style="padding:0.2rem 0.5rem;">Rs 7
-                  </div>
-                </div>
-                <div class="columns is-mobile">
-                  <div class="column" style="padding:0.2rem 0.5rem;"><b>Payable</b></div>
-                  <div class="column has-text-right" style="padding:0.2rem 0.5rem;"><b>Rs
-                      160</b>
-                  </div>
-                </div>
-
-              </div>
-
+  
+  
             </div>
-
-
           </div>
+  
         </div>
-
       </div>
-    </div>
 
   </div>
 
