--- a/src/app/modules/dashboard/pages/order-chart/order-chart.component.html
+++ b/src/app/modules/dashboard/pages/order-chart/order-chart.component.html
@@ -7,22 +7,26 @@
             <p class="subtitle">Order Chart</p>
           </div>
           <div class="column has-text-right ">
-            <a class="button is-rounded is-small">White</a>
+            <a class="button is-rounded is-small" (click)="load()">
+              <fa-icon icon="spinner"></fa-icon>
+            </a>
           </div>
         </div>
       </div>
-      
-      <highcharts-chart 
+
+      <loading-container [loadable]="(chart$ | async)">
+        <highcharts-chart 
           [Highcharts]="Highcharts"  
           [constructorType]="chartConstructor"
-          [options]="chartOptions"
+          [options]="(chart$ | async).entities"
           [callbackFunction]="chartCallback"
-
           [(update)]="updateFlag"
           [oneToOne]="oneToOneFlag"
           [runOutsideAngular]="false" 
-          style="width: 100%; height: 400px; display: block;"
+          style="width: 90%; height: 400px; display: block;"
         ></highcharts-chart>
+    </loading-container>
+      
 
     </div>
   </div>
