store actions for oder and payment chart - WIP

--- a/src/app/modules/dashboard/pages/order-chart/order-chart.component.html
+++ b/src/app/modules/dashboard/pages/order-chart/order-chart.component.html
@@ -4,9 +4,16 @@
       <div class="heading">
         <div class="columns is-mobile is-centered">
           <div class="column">
-            <p class="subtitle">Order Chart</p>
+            <p class="subtitle" *ngIf="isorderchart">Order Chart</p>
+            <p class="subtitle" *ngIf="!isorderchart">Payment Chart</p>
           </div>
-          <div class="column has-text-right ">
+          <div class="column has-text-right">
+              <label class="toggle is-small" style="width: 150px;text-align: left;">                
+                  <input class="toggle-checkbox" type="checkbox" (change)="isorderchart = !isorderchart">
+                  <div class="toggle-switch"></div>
+                  <span class="toggle-label" *ngIf="isorderchart">Orders</span>
+                  <span class="toggle-label" *ngIf="!isorderchart">Payments</span>
+                </label>
             <a class="button is-rounded is-small" (click)="load()">
               <fa-icon icon="spinner"></fa-icon>
             </a>
@@ -14,11 +21,22 @@
         </div>
       </div>
 
-      <loading-container [loadable]="(chart$ | async)">
-        <highcharts-chart 
+      <loading-container [loadable]="(dashboard$ | async)">
+        <highcharts-chart *ngIf="isorderchart" 
           [Highcharts]="Highcharts"  
           [constructorType]="chartConstructor"
-          [options]="(chart$ | async).entities"
+          [options]="(dashboard$ | async).orderchart"
+          [callbackFunction]="chartCallback"
+          [(update)]="updateFlag"
+          [oneToOne]="oneToOneFlag"
+          [runOutsideAngular]="false" 
+          style="width: 90%; height: 400px; display: block;"
+        ></highcharts-chart>
+
+        <highcharts-chart *ngIf="!isorderchart"
+          [Highcharts]="Highcharts"  
+          [constructorType]="chartConstructor"
+          [options]="(dashboard$ | async).paymentchart"
           [callbackFunction]="chartCallback"
           [(update)]="updateFlag"
           [oneToOne]="oneToOneFlag"
@@ -26,6 +44,7 @@
           style="width: 90%; height: 400px; display: block;"
         ></highcharts-chart>
     </loading-container>
+    
       
 
     </div>
