--- a/src/app/modules/dashboard/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/pages/dashboard/dashboard.component.html
@@ -2,23 +2,22 @@
   <ul>
     <li class="is-active"><a>Today</a></li>
     <li><a>This Week</a></li>
-    <li><a>This Month</a></li>    
+    <li><a>This Month</a></li>
   </ul>
 
   <div class="field has-addons" style="margin-right: 10px;">
-      <p class="control has-icons-left">
-          <input class="input is-rounded is-small" style="padding-left:2.5rem;" type="password"
-              placeholder="From Date">
-          <span class="icon is-small is-left">
-              <fa-icon icon="calendar-alt"></fa-icon>
-          </span>
-      </p>
-      <p class="control">
-        <a class="button is-primary is-small is-rounded">
-          Search
-        </a>
-      </p>
-    </div>
+    <p class="control has-icons-left">
+      <input class="input is-rounded is-small" style="padding-left:2.5rem;" type="password" placeholder="From Date">
+      <span class="icon is-small is-left">
+        <fa-icon icon="calendar-alt"></fa-icon>
+      </span>
+    </p>
+    <p class="control">
+      <a class="button is-primary is-small is-rounded">
+        Search
+      </a>
+    </p>
+  </div>
 </div>
 
 <div style="margin-bottom: 16px;">
@@ -34,43 +33,13 @@
 <div class="columns">
 
   <div class="column">
-    <!-- <div class="box">
-      <div class="content">
-        <div class="heading">
-          <div class="columns is-mobile is-centered">
-            <div class="column">
-              <p class="subtitle">Payment Summery</p>
-            </div>
-            <div class="column has-text-right ">
-              <a class="button is-rounded is-small">White</a>
-            </div>
-          </div>
-        </div>
-        <div id="container_hori" style="min-width: 310px; max-width: 800px; height: 400px; margin: 0 auto"></div>
-      </div>
-    </div> -->
 
-<app-payment-summery-chart></app-payment-summery-chart>
+    <app-payment-summery-chart></app-payment-summery-chart>
 
   </div>
 
 
   <div class="column">
-    <!-- <div class="box">
-      <div class="content">
-        <div class="heading">
-          <div class="columns is-mobile is-centered">
-            <div class="column">
-              <p class="subtitle">Order Status</p>
-            </div>
-            <div class="column has-text-right ">
-              <a class="button is-rounded is-small">White</a>
-            </div>
-          </div>
-        </div>
-        <div id="container_hori2" style="min-width: 310px; max-width: 800px; height: 400px; margin: 0 auto"></div>
-      </div>
-    </div> -->
     <app-order-status-chart></app-order-status-chart>
   </div>
 </div>
@@ -86,7 +55,7 @@
 
 
   <div class="column">
-    <app-inventory-status></app-inventory-status>    
+    <app-inventory-status></app-inventory-status>
   </div>
 
 
