--- a/src/app/loading-container/loading-container.component.html
+++ b/src/app/loading-container/loading-container.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="loadable.loading" class="loader-container">
+<div *ngIf="loadable.loading">
   <!-- This is loading spinner... -->
   <div class="loader"></div>
 </div>
