--- a/src/app/modules/dashboard/pages/order-chart/order-chart.component.html
+++ b/src/app/modules/dashboard/pages/order-chart/order-chart.component.html
@@ -14,37 +14,38 @@
                   <span class="toggle-label" *ngIf="isorderchart">Orders</span>
                   <span class="toggle-label" *ngIf="!isorderchart">Payments</span>
                 </label>
-            <!-- <a class="button is-rounded is-small" (click)="load()">
+            <a class="button is-rounded is-small" (click)="load()">
               <fa-icon icon="spinner"></fa-icon>
-            </a> -->
+            </a>
           </div>
         </div>
       </div>
 
-      <loading-container [loadable]="(dashboard$ | async)">
-        <highcharts-chart *ngIf="isorderchart" 
+      <loading-container *ngIf="isorderchart" [loadable]="(orderchart$ | async)">
+        <highcharts-chart 
           [Highcharts]="Highcharts"  
           [constructorType]="chartConstructor"
-          [options]="(dashboard$ | async).orderchart"
+          [options]="(orderchart$ | async).chartdata"
           [callbackFunction]="chartCallback"
           [(update)]="updateFlag"
           [oneToOne]="oneToOneFlag"
           [runOutsideAngular]="false" 
-          style="width: 90%; height: 400px; display: block;"
-        ></highcharts-chart>
+          style="width: 100%; height: 400px; display: block;"
+        ></highcharts-chart>        
+    </loading-container>
 
-        <highcharts-chart *ngIf="!isorderchart"
+    <loading-container *ngIf="!isorderchart" [loadable]="(paymentchart$ | async)">
+    <highcharts-chart
           [Highcharts]="Highcharts"  
           [constructorType]="chartConstructor"
-          [options]="(dashboard$ | async).paymentchart"
+          [options]="(paymentchart$ | async).chartdata"
           [callbackFunction]="chartCallback"
           [(update)]="updateFlag"
           [oneToOne]="oneToOneFlag"
           [runOutsideAngular]="false" 
-          style="width: 90%; height: 400px; display: block;"
+          style="width: 100%; height: 400px; display: block;"
         ></highcharts-chart>
     </loading-container>
-    
       
 
     </div>
