--- a/src/app/modules/dashboard/pages/payment-summery-chart/payment-summery-chart.component.html
+++ b/src/app/modules/dashboard/pages/payment-summery-chart/payment-summery-chart.component.html
@@ -1,32 +1,31 @@
 <div class="box">
-    <div class="content">
-      <div class="heading">
-        <div class="columns is-mobile is-centered">
-          <div class="column">
-            <p class="subtitle">Payment Summery</p>
-          </div>
-          <div class="column has-text-right ">
-            <!-- <a class="button is-rounded is-small">White</a> -->
-            <label class="toggle is-small">
-              <input class="toggle-checkbox" type="checkbox" checked>
-              <div class="toggle-switch"></div>
-              <span class="toggle-label">Bluetooth</span>
-            </label>
-          </div>
+  <div class="content">
+    <div class="heading">
+      <div class="columns is-mobile is-centered">
+        <div class="column">
+          <p class="subtitle">Payment Summery</p>
+        </div>
+        <div class="column has-text-right ">
+          <!-- <a class="button is-rounded is-small">White</a> -->
+          <label class="toggle is-small">
+            <input class="toggle-checkbox" type="checkbox" checked>
+            <div class="toggle-switch"></div>
+            <span class="toggle-label">Bluetooth</span>
+          </label>
+
+          <a class="button is-rounded is-small" (click)="load()">
+              <fa-icon icon="spinner"></fa-icon>
+            </a>
+
         </div>
       </div>
-      
-      <highcharts-chart 
-          [Highcharts]="Highcharts"   
-          [constructorType]="chartConstructor"
-          [options]="chartOptions"
-          [callbackFunction]="chartCallback"
-
-          [(update)]="updateFlag"
-          [oneToOne]="oneToOneFlag"
-          [runOutsideAngular]="false" 
-          style="width: 100%; height: 400px; display: block;"
-        ></highcharts-chart>
-
     </div>
+
+    <loading-container [loadable]="(paymentsummarychart$ | async)" style="display: flex;">
+      <highcharts-chart [Highcharts]="Highcharts" [constructorType]="chartConstructor" 
+      [options]="(paymentsummarychart$ | async).chartdata"
+        [callbackFunction]="chartCallback" [(update)]="updateFlag" [oneToOne]="oneToOneFlag" [runOutsideAngular]="false"        
+        ></highcharts-chart>
+    </loading-container>
   </div>
+</div>
