--- a/src/app/modules/dashboard/pages/order-status-chart/order-status-chart.component.html
+++ b/src/app/modules/dashboard/pages/order-status-chart/order-status-chart.component.html
@@ -6,22 +6,25 @@
             <p class="subtitle">Order Status</p>
           </div>
           <div class="column has-text-right ">
-            <a class="button is-rounded is-small">White</a>
+              <a class="button is-rounded is-small" (click)="load()">
+                  <fa-icon icon="spinner"></fa-icon>
+                </a>
           </div>
         </div>
       </div>
       
+      <loading-container [loadable]="(orderstatuschart$ | async)">
       <highcharts-chart 
           [Highcharts]="Highcharts"   
           [constructorType]="chartConstructor"
-          [options]="chartOptions"
+          [options]="(orderstatuschart$ | async).chartdata"
           [callbackFunction]="chartCallback"
 
           [(update)]="updateFlag"
           [oneToOne]="oneToOneFlag"
-          [runOutsideAngular]="false" 
-          style="width: 100%; height: 400px; display: block;"
+          [runOutsideAngular]="false"    
+                 
         ></highcharts-chart>
-
+      </loading-container>
     </div>
   </div>
