--- a/src/app/modules/dashboard/pages/top-selling/top-selling.component.html
+++ b/src/app/modules/dashboard/pages/top-selling/top-selling.component.html
@@ -1,17 +1,19 @@
 <div class="box">
-    <div class="content">
-      <div class="heading">
-        <div class="columns is-mobile is-centered">
-          <div class="column">
-            <p class="subtitle">Top Selling</p>
-          </div>
-          <div class="column has-text-right ">
-            <a class="button is-rounded is-small">White</a>
-          </div>
+  <div class="content">
+    <div class="heading">
+      <div class="columns is-mobile is-centered">
+        <div class="column">
+          <p class="subtitle">Top Selling</p>
+        </div>
+        <div class="column has-text-right ">
+          <a class="button is-rounded is-small" (click)="load()">
+            <fa-icon icon="spinner"></fa-icon>
+          </a>
         </div>
       </div>
+    </div>
 
-
+    <loading-container [loadable]="(topselling$ | async)">
       <table class="table is-hoverable is-fullwidth">
         <thead>
           <tr>
@@ -20,42 +22,23 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let item of (topselling$ | async)">
+          <tr *ngFor="let item of (topselling$ | async).topselling">
             <td>{{item.title}}</td>
             <td>{{item.quantity}}</td>
           </tr>
-          <!-- <tr>
-            <td>Masala Chai</td>
-            <td>68</td>
-          </tr>
-          <tr>
-            <td>Masala Chai</td>
-            <td>68</td>
-          </tr>
-          <tr>
-            <td>Masala Chai</td>
-            <td>68</td>
-          </tr>
-          <tr>
-            <td>Masala Chai</td>
-            <td>68</td>
-          </tr>
-          <tr>
-            <td>Masala Chai</td>
-            <td>68</td>
-          </tr> -->
         </tbody>
       </table>
+    </loading-container>
 
-      <nav class="pagination is-rounded is-small" role="navigation" aria-label="pagination">
-        <a class="pagination-previous">Previous</a>
-        <a class="pagination-next">Next page</a>
-        <ul class="pagination-list" style="margin-top:-.5rem;">
-          <li><a class="pagination-link" aria-label="Goto page 1">1</a></li>
-          <li><span class="pagination-ellipsis">&hellip;</span></li>
-          <li><a class="pagination-link is-current" aria-label="Page 46" aria-current="page">46</a></li>
-        </ul>
-      </nav>
+    <nav class="pagination is-rounded is-small" role="navigation" aria-label="pagination">
+      <a class="pagination-previous">Previous</a>
+      <a class="pagination-next">Next page</a>
+      <ul class="pagination-list" style="margin-top:-.5rem;">
+        <li><a class="pagination-link" aria-label="Goto page 1">1</a></li>
+        <li><span class="pagination-ellipsis">&hellip;</span></li>
+        <li><a class="pagination-link is-current" aria-label="Page 46" aria-current="page">46</a></li>
+      </ul>
+    </nav>
 
-    </div>
   </div>
+</div>
